Fix flex-wrap in history intro on tablet devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ footer p {
 
 /* Media query: tablets and larger phones (768px and up) */
 @media screen and (min-width: 768px) {
-    
+
     header {
         flex-direction: row;
     }
@@ -222,9 +222,16 @@ footer p {
         right: auto;
     }
 
+    main {
+        padding-left: 20px;
+        padding-right: 20px;
+        width: 100vw;
+    }
+
     #history-text {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: space-evenly;
     }
 
@@ -239,6 +246,7 @@ footer p {
         width: 100%;
         padding-top: 20px;
     }
+
     #history-text a {
         color: black;
         text-decoration: none;
